--- a/goreleaser.yml
+++ b/goreleaser.yml
@@ -23,7 +23,7 @@ build:
   - amd64
   - arm
 
-  ldflags: -s -w -X version.Version={{.Version}}
+  ldflags: -s -w -X main.Version={{.Version}}
 
 nfpm:
   name_template: '{{ .ProjectName }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
