--- a/goreleaser.yml
+++ b/goreleaser.yml
@@ -34,7 +34,7 @@ release:
 
   # If set to true, will not auto-publish the release.
   # Default is false.
-  draft: true
+  draft: false
 
   # If set to true, will mark the release as not ready for production.
   # Default is false.
