--- a/goreleaser.yml
+++ b/goreleaser.yml
@@ -15,6 +15,7 @@ build:
   - linux
   - darwin
   - arm
+  - windows
 
   # GOARCH to build in.
   # For more info refer to https://golang.org/doc/install/source#environment
