--- a/goreleaser.yml
+++ b/goreleaser.yml
@@ -118,11 +118,25 @@ brew:
 
 snapcraft:
   name_template: '{{ .ProjectName }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
-  summary: Kubernetes bulk port forwarding utility.
+  summary: Kubernetes bulk port forwarding command link utility for local development.
   description: |
-    Kubernetes bulk port forwarding utility.
+    Kubernetes bulk port forwarding utility for local development.
+    kubefwd allows you to port forward all Kubernetes Pods connected to Services on one or more
+    Namespaces and contexts (clusters).
+    See https://github.com/txn2/kubefwd
+
+  replacements:
+    amd64: 64-bit
+    386: 32-bit
+    darwin: macOS
+    linux: Tux
+
   grade: stable
-  confinement: classic
+  confinement: strict
+
+  apps:
+    kubefwd:
+      plugs: ["home", "network","network-bind","personal-files"]
 
 dockers:
 -
