--- a/goreleaser.yml
+++ b/goreleaser.yml
@@ -149,10 +149,16 @@ dockers:
   binaries:
     - kubefwd
   dockerfile: Dockerfile
-  tag_templates:
-  - "txn2/kubefwd:{{ .Tag }}"
-  - "txn2/kubefwd:v{{ .Major }}"
-  - latest
+  image_templates:
+    - "txn2/kubefwd:latest"
+    - "txn2/kubefwd:{{ .Tag }}"
+    - "txn2/kubefwd:v{{ .Major }}"
+    - "txn2/kubefwd:amd64-{{ .Tag }}"
+    - "txn2/kubefwd:amd64-v{{ .Major }}"
+  build_flag_templates:
+    - "--label=org.label-schema.schema-version=1.0"
+    - "--label=org.label-schema.version={{.Version}}"
+    - "--label=org.label-schema.name={{.ProjectName}}"
 -
   goos: linux
   goarch: arm
@@ -160,7 +166,12 @@ dockers:
   binaries:
     - kubefwd
   dockerfile: Dockerfile
-  tag_templates:
-  - "txn2/kubefwd:armv6-{{ .Tag }}"
-  - "txn2/kubefwd:armv6-v{{ .Major }}"
-  - arm-latest
+  image_templates:
+    - "txn2/kubefwd:armv6-latest"
+    - "txn2/kubefwd:armv6-{{ .Tag }}"
+    - "txn2/kubefwd:armv6-{{ .Tag }}-arm6"
+    - "txn2/kubefwd:armv6-v{{ .Major }}"
+  build_flag_templates:
+    - "--label=org.label-schema.schema-version=1.0"
+    - "--label=org.label-schema.version={{.Version}}"
+    - "--label=org.label-schema.name={{.ProjectName}}"
