updated build script

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -78,10 +78,8 @@ nfpms:
       - apk
       - deb
       - rpm
-    dependencies:
-      - git
     recommends:
-      - golang
+      - kubectl
 
 release:
   github:
