--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -43,66 +43,63 @@ changelog:
       - Merge branch
       - go mod tidy
 
-dockers:
-  -
-    goos: linux
-    goarch: amd64
-    goarm: ''
-    dockerfile: Dockerfile.alpine
-    ids:
-      - kubefwd
-    image_templates:
-      - "txn2/kubefwd:latest"
-      - "txn2/kubefwd:{{ .Tag }}"
-      - "txn2/kubefwd:v{{ .Major }}"
-      - "txn2/kubefwd:amd64-{{ .Tag }}"
-      - "txn2/kubefwd:amd64-v{{ .Major }}"
-      - "txn2/kubefwd:latest_alpine-3"
-      - "txn2/kubefwd:{{ .Tag }}_alpine-3"
-      - "txn2/kubefwd:v{{ .Major }}_alpine-3"
-      - "txn2/kubefwd:amd64-{{ .Tag }}_alpine-3"
-      - "txn2/kubefwd:amd64-v{{ .Major }}_alpine-3"
-    build_flag_templates:
-      - "--label=org.label-schema.schema-version=1.0"
-      - "--label=org.label-schema.version={{.Version}}"
-      - "--label=org.label-schema.name={{.ProjectName}}"
-  -
-    goos: linux
-    goarch: amd64
-    goarm: ''
-    dockerfile: Dockerfile.ubuntu
-    ids:
-      - kubefwd
-    image_templates:
-      - "txn2/kubefwd:latest_ubuntu-20.04"
-      - "txn2/kubefwd:{{ .Tag }}_ubuntu-20.04"
-      - "txn2/kubefwd:v{{ .Major }}_ubuntu-20.04"
-      - "txn2/kubefwd:amd64-{{ .Tag }}_ubuntu-20.04"
-      - "txn2/kubefwd:amd64-v{{ .Major }}_ubuntu-20.04"
-    build_flag_templates:
-      - "--label=org.label-schema.schema-version=1.0"
-      - "--label=org.label-schema.version={{.Version}}"
-      - "--label=org.label-schema.name={{.ProjectName}}"
+# dockers:
+#   -
+#     goos: linux
+#     goarch: amd64
+#     goarm: ''
+#     dockerfile: Dockerfile.alpine
+#     ids:
+#       - kubefwd
+#     image_templates:
+#       - "txn2/kubefwd:latest"
+#       - "txn2/kubefwd:{{ .Tag }}"
+#       - "txn2/kubefwd:v{{ .Major }}"
+#       - "txn2/kubefwd:amd64-{{ .Tag }}"
+#       - "txn2/kubefwd:amd64-v{{ .Major }}"
+#       - "txn2/kubefwd:latest_alpine-3"
+#       - "txn2/kubefwd:{{ .Tag }}_alpine-3"
+#       - "txn2/kubefwd:v{{ .Major }}_alpine-3"
+#       - "txn2/kubefwd:amd64-{{ .Tag }}_alpine-3"
+#       - "txn2/kubefwd:amd64-v{{ .Major }}_alpine-3"
+#     build_flag_templates:
+#       - "--label=org.label-schema.schema-version=1.0"
+#       - "--label=org.label-schema.version={{.Version}}"
+#       - "--label=org.label-schema.name={{.ProjectName}}"
+#   -
+#     goos: linux
+#     goarch: amd64
+#     goarm: ''
+#     dockerfile: Dockerfile.ubuntu
+#     ids:
+#       - kubefwd
+#     image_templates:
+#       - "txn2/kubefwd:latest_ubuntu-20.04"
+#       - "txn2/kubefwd:{{ .Tag }}_ubuntu-20.04"
+#       - "txn2/kubefwd:v{{ .Major }}_ubuntu-20.04"
+#       - "txn2/kubefwd:amd64-{{ .Tag }}_ubuntu-20.04"
+#       - "txn2/kubefwd:amd64-v{{ .Major }}_ubuntu-20.04"
+#     build_flag_templates:
+#       - "--label=org.label-schema.schema-version=1.0"
+#       - "--label=org.label-schema.version={{.Version}}"
+#       - "--label=org.label-schema.name={{.ProjectName}}"
 
 archives:
-  - name_template: '{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
-    replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
-      386: i386
-      amd64: x86_64
-    format_overrides:
-      - goos: windows
-        format: zip
+  - name_template: >-
+      {{- .ProjectName }}_
+      {{- title .Os }}_
+      {{- if eq .Arch "amd64" }}x86_64
+      {{- else if eq .Arch "386" }}i386
+      {{- else }}{{ .Arch }}{{ end }}
+      {{- if .Arm }}v{{ .Arm }}{{ end -}}
 
 nfpms:
   - file_name_template: '{{ .ProjectName }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
-    homepage:  https://github.com/txn2/kubefwd
-    description: Kubernetes bulk port forwarding utility.
-    maintainer: Craig Johnston https://twitter.com/cjimti
+    homepage:  https://github.com/CodeCoil/kubefwd
+    description: Kubernetes bulk port forwarding utility (Fork on CodeCoil).
+    maintainer: Luca Piombino
     license: Apache 2.0
-    vendor: https://github.com/txn2
+    vendor: https://github.com/CodeCoil
     formats:
       - apk
       - deb
@@ -112,24 +109,24 @@ nfpms:
 
 release:
   github:
-    owner: txn2
+    owner: CodeCoil
     name: kubefwd
   name_template: "{{.ProjectName}}-v{{.Version}} {{.Env.USER}}"
 
-brews:
-  - name: kubefwd
-    tap:
-      owner: txn2
-      name: homebrew-tap
-    commit_author:
-      name: Craig Johnston
-      email: cj@imti.co
-    folder: Formula
-    homepage: https://github.com/txn2/kubefwd
-    description: "Kubernetes bulk port forwarding utility."
-    skip_upload: false
-    dependencies:
-      - name: kubectl
-        type: optional
-    test: |-
-      kubefwd version
+# brews:
+#   - name: kubefwd
+#     tap:
+#       owner: txn2
+#       name: homebrew-tap
+#     commit_author:
+#       name: Craig Johnston
+#       email: cj@imti.co
+#     folder: Formula
+#     homepage: https://github.com/txn2/kubefwd
+#     description: "Kubernetes bulk port forwarding utility."
+#     skip_upload: false
+#     dependencies:
+#       - name: kubectl
+#         type: optional
+#     test: |-
+#       kubefwd version
