--- a/.github/workflows/goreleaser.yaml
+++ b/.github/workflows/goreleaser.yaml
@@ -31,12 +31,9 @@ on:
     #     description: 'Environment to run tests against'
     #     type: environment
     #     required: true
-  pull_request:
-    branches:
-    - master
   push:
-    branches:
-    - fix/
+    tags:
+      - '*'
 
 permissions:
   contents: write
